Jenkins/topic6/green/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tomcat-green
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tomcat-green
    spec:
      containers:
        - name: tomcat-green
          image: 192.168.56.242:8082/tomcat
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
